<?xml version="1.0"?>
<package format="2">
  <name>geometry_tests</name>
  <version>0.0.1</version>
  <description>Metapackage of geometry tests ROS.</description>
  
  <maintainer email="joaoaguizo@gmail.com">Joao Aguizo</maintainer>
  
  <author email="joaoaguizo@gmail.com">Joao Aguizo</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>test_tf</run_depend>
  <run_depend>test_tf2</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
